homepage right column done, we've made the Kudo message bubble container consist of three parts so that the central message part can expand to accomodate more content. This will produce two issues: needing to make a taller central background image for the bubble and not being able to vertically align the bubble arrow with the member avatar image.

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -132,27 +132,38 @@ img#new-to-ok-arrow {
 
 div.kudo_message_cont {
 	clear: both;
-	height: 80px;
-	
+	margin-bottom: 8px;
 }
 
-div.kudo_message {
-	width: 506px;
-	height: 65px;
-	padding-left: 20px;
-	padding-top: 8px;
-	background: url(kudo_message_bg.png) no-repeat left top;
+div.kudo_message_bubble_cont {
 	float: left;
-	margin-left: 7px;
+	width: 525px;
+	margin-left: 15px;
+}
+
+div.kudo_message_mid {
+	padding-left: 18px;
+	background: url(kudo_message_mid.png) no-repeat left top;
+}
+
+div.kudo_message_top {
+	width: 526px;
+	height: 11px;
+	background: url(kudo_message_top.png) no-repeat left bottom;
+}
+
+div.kudo_message_bot {
+	width: 526px;
+	height: 13px;
+	background: url(kudo_message_bot.png) no-repeat left top;
 }
 
 
-div.kudo_message p {
-	margin-left: 10px;
-	margin-bottom: 5px;
+div.kudo_message_mid p {
 	font: normal 1.2em Verdana, "Copse", Arial, sans-serif;
 	color: #000;
-
+	margin-bottom: 0;
+	padding: 0 15px 8px 15px;
 }
 
 img.avatar {
@@ -161,6 +172,7 @@ img.avatar {
 	-moz-box-shadow: 0 0 5px 2px #ccc;
 	box-shadow: 0 0 5px 2px #ccc;
 	float: left;
+	margin-top: 8px;
 	
 }
 
